# lightframe-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/: copilot-instructions.md
lightframe/: CMakeLists.txt
lightframe/src/: Engine.cpp  Engine.h  Window.cpp  Window.h  glad.c
lightframe/src/core/: Logger.cpp  Logger.h  ObjectId.cpp  ObjectId.h  Strings.h
lightframe/src/debug/: Assertions.h
lightframe/src/managers/: ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
lightframe/src/platform/: LinuxPlatform.cpp  LinuxPlatform.h  Platform.cpp  Platform.h  WindowsPlatform.cpp  WindowsPlatform.h
lightframe/src/rendering/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  RendererApi.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
lightframe/src/rendering/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
lightframe/src/resources/: ResourceManager.h
lightframe/src/scenes/: GameObject.cpp  GameObject.h  GameObject3D.cpp  GameObject3D.h  GameObjectTemplates.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  SceneTemplates.h
lightframe/src/scenes/components/: Component.h  MeshRenderer.h
test-bed/: CMakeLists.txt
test-bed/assets/shaders/: default.shader
test-bed/src/: main.cpp
